<?xml version="1.0"?>
<package>
  <name>pyturtlebot</name>
  <version>0.0.0</version>
  <description>A simple Python turtlebot interface.</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>MIT</license>

  <author email="william@osrfoundation.org">William Woodall</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kobuki_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>kobuki_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>python-numpy</run_depend>

</package>